# rubiks-cube-solver

./: CMakeLists.txt  GenericRubiksCube.cpp  GenericRubiksCube.h  README.md  RubiksCube3dArray.cpp  main.cpp
Model/: RubiksCube1dArray.cpp  RubiksCubeBitboard.cpp
Model/PatternDatabase/: PatternDatabase.h
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.h  PatternDatabases.cpp  PermutationIndexer.h  math.cpp  math.h
Solvers/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
